--- a/letter-1.html
+++ b/letter-1.html
@@ -103,7 +103,7 @@
                                                                                                 <tbody>
                                                                                                     <tr>
                                                                                                         <td>
-                                                                                                            <h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 18px; font-weight: 800; line-height: 21px; color: #21212b; margin: 0;">
+                                                                                                            <h1 class="tl-h1" style="font-family: Arial, Helvetica, sans-serif; font-weight: 800; color: #21212b; margin: 0;">
                                                                                                                 Участвуй в IPO КазМунайГаз с <br>розыгрышем <span style="color:#ff6700;">₸1 000 000</span>
                                                                                                             </h1>
                                                                                                         </td>
@@ -115,7 +115,7 @@
                                                                                                     </tr>
                                                                                                     <tr>
                                                                                                         <td align="center" style="padding-top: 12px; ">
-                                                                                                            <img align="center" src="https://raw.githubusercontent.com/anastasiyamartynenko/iii/master/images/why-us.png" style="display: block; border-radius: 6px;" title="" width="360"/>
+                                                                                                            <img align="center" src="https://raw.githubusercontent.com/anastasiyamartynenko/email/master/images/banner-priz.png" style="width:100%; display: block; border-radius: 6px;" title="" width="360"/>
                                                                                                         </td>
                                                                                                     </tr>
                                                                                                 </tbody>
@@ -173,7 +173,7 @@
                                                                         </td>
                                                                     </tr>
                                                                     <tr>
-                                                                        <td style="text-align: center; padding-top: 17px;"><img src="images/priz_u.svg" alt=""></td>
+                                                                        <td style="text-align: center; padding-top: 17px;"><img src="https://raw.githubusercontent.com/anastasiyamartynenko/email/master/images/phone-1.png" alt=""></td>
                                                                     </tr>
                                                                 </tbody>
                                                             </table>
@@ -197,18 +197,18 @@
                                                                                             <table width="100%" cellspacing="0" cellpadding="0">
                                                                                                 <tbody>
                                                                                                     <tr>
-                                                                                                        <td align="center" style="color: #0c1014; font-size: 18px; font-weight: 600; line-height: 21px; padding-top: 32px; font-family: Arial, Helvetica, sans-serif;">
+                                                                                                        <td class="center" style="color: #0c1014; font-size: 18px; font-weight: 600; line-height: 21px; padding-top: 32px; font-family: Arial, Helvetica, sans-serif;">
                                                                                                             Мастеркласс по IPO - бесплатно
                                                                                                         </td>
                                                                                                     </tr>
                                                                                                     <tr>
-                                                                                                        <td align="center" style="color: #64646b; font-size: 15px; font-weight: 400; line-height: 18px; padding-top: 12px; font-family: Arial, Helvetica, sans-serif;">
+                                                                                                        <td class="center" style="color: #64646b; font-size: 15px; font-weight: 400; line-height: 18px; padding-top: 12px; font-family: Arial, Helvetica, sans-serif;">
                                                                                                             Пройди обучение без регистрации, <br>
                                                                                                             прямо сейчас и получи сертификат
                                                                                                         </td>
                                                                                                     </tr>
                                                                                                     <tr>
-                                                                                                        <td align="center" style="font-size: 15px; font-weight: 500; line-height: 18px; padding-top: 24px; font-family: Arial, Helvetica, sans-serif; height: 29px; padding-bottom: 32px;">
+                                                                                                        <td class="center" style="font-size: 15px; font-weight: 500; line-height: 18px; padding-top: 24px; font-family: Arial, Helvetica, sans-serif; height: 29px; padding-bottom: 32px;">
                                                                                                             <a href="https://edu.jusaninvest.kz/" target="_blank" style="color: #ffffff; background-color: #ff6700; text-decoration: none; border-radius: 6px; padding-top: 6px; padding-left: 32px; padding-bottom: 6px; padding-right: 32px; height: 29px;" width="190">
                                                                                                                 Начать обучение
                                                                                                             </a>
@@ -221,7 +221,7 @@
                                                                                             <tbody>
                                                                                                 <tr>
                                                                                                     <td align="center" style="color: #0c1014; font-size: 18px; font-weight: 600; line-height: 21px; font-family: Arial, Helvetica, sans-serif;">
-                                                                                                       <img src="images/master.png" alt="">
+                                                                                                       <img src="https://raw.githubusercontent.com/anastasiyamartynenko/email/master/images/master.png" alt="">
                                                                                                     </td>
                                                                                                 </tr>
                                                                                             </tbody>
