--- a/letter-1.html
+++ b/letter-1.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&amp;display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://github.com/anastasiyamartynenko/email/blob/542a76e3f39647cad73d5e796de9db0b7cc5d38b/style.css">
         <!--[if (mso 16)]>
             <style type="text/css">
                 a {
