--- a/letter-1.html
+++ b/letter-1.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&amp;display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="https://raw.githubusercontent.com/anastasiyamartynenko/email/542a76e3f39647cad73d5e796de9db0b7cc5d38b/style.css">
+        <link rel="stylesheet" href="https://raw.githubusercontent.com/anastasiyamartynenko/email/style.css">
         <!--[if (mso 16)]>
             <style type="text/css">
                 a {
@@ -104,7 +104,7 @@
                                                                                                     <tr>
                                                                                                         <td>
                                                                                                             <h1 class="tl-h1" style="font-family: Arial, Helvetica, sans-serif; font-weight: 800; color: #21212b; margin: 0;">
-                                                                                                                Участвуй в IPO КазМунайГаз с <br>розыгрышем <span style="color:#ff6700;">₸1 000 000</span>
+                                                                                                                Участвуй в IPO КазМунайГаз <br>с розыгрышем <span style="color:#ff6700;">₸1 000 000</span>
                                                                                                             </h1>
                                                                                                         </td>
                                                                                                     </tr>
