--- a/letter-1.html
+++ b/letter-1.html
@@ -9,6 +9,46 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&amp;display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://raw.githubusercontent.com/anastasiyamartynenko/email/style.css">
+        <style>
+            .table {
+                width: 570px;
+                margin: auto;
+            }
+            table {
+                width: 100%;
+            }
+            .d-block {
+                display: none;
+            }
+            .tl-h1 {
+                font-size: 30px;
+                line-height: 36px;
+            }
+            .center {
+                text-align: left;
+            }
+
+            
+            @media (max-width: 360px) {
+                .table {
+                    width: 320px;
+                    margin: auto;
+                }
+                .d-none {
+                    display: none;
+                }
+                .d-block {
+                    display: block;
+                }
+                .tl-h1 {
+                    font-size: 20px;
+                    line-height: 24px;
+                }
+                .center {
+                    text-align: center;
+                }
+            }
+        </style>
         <!--[if (mso 16)]>
             <style type="text/css">
                 a {
@@ -58,7 +98,7 @@
                                                             <table style="background-color: #F8F8F8;" cellspacing="0" cellpadding="0" bgcolor="#F8F8F8" align="center">
                                                                 <tbody>
                                                                     <tr>
-                                                                        <td align="left">
+                                                                        <td align="center">
                                                                             <table width="100%" cellspacing="0" cellpadding="0">
                                                                                 <tbody>
                                                                                     <tr>
@@ -428,21 +468,21 @@
                                                                                                         </td>
                                                                                                     </tr>
                                                                                                     <tr>
-                                                                                                        <td align="center" style="color: #64646b; font-size: 15px; font-weight: 400; line-height: 18px; padding-top: 12px; font-family: Arial, Helvetica, sans-serif;">
-                                                                                                            Инвестируй в акции, ПИФы и ETF на<br />
-                                                                                                            фондовых биржах США, Англии и<br />
-                                                                                                            Казахстана через приложение<br />
+                                                                                                        <td align="center" style="color: #64646b; font-size: 14px; font-weight: 400; line-height: 17px; padding-top: 12px; font-family: Arial, Helvetica, sans-serif;">
+                                                                                                            Инвестируй в акции, ПИФы и ETF на
+                                                                                                            фондовых биржах США, Англии и
+                                                                                                            Казахстана через приложение
                                                                                                             Jusan
                                                                                                         </td>
                                                                                                     </tr>
                                                                                                     <tr>
                                                                                                         <td align="center" style="padding-top: 32px; padding-bottom: 32px;">
                                                                                                             <a href="https://play.google.com/store/apps/details?id=kz.tsb.app24&amp;hl=ru&amp;utm_source=jusaninvest&amp;utm_medium=website" style="text-decoration: none;">
-                                                                                                                <img style="padding-right: 20px; width: 110px;" src="https://raw.githubusercontent.com/anastasiyamartynenko/iii/master/images/google-play.svg"
+                                                                                                                <img style="padding-right: 20px; width: 110px;" src="https://raw.githubusercontent.com/anastasiyamartynenko/email/d6386f9ce88a27d290c33bcb6bbcdf065d6735f0/images/google-play.svg"
                                                                                                                     alt=""/>
                                                                                                             </a>
                                                                                                             <a href="https://apps.apple.com/kz/app/j%C3%BDsan/id1441936010?utm_source=jusaninvest&amp;utm_medium=website" style="text-decoration: none;">
-                                                                                                                <img style="width: 110px;" src="https://raw.githubusercontent.com/anastasiyamartynenko/iii/master/images/app-store.svg" alt="" />
+                                                                                                                <img style="width: 110px;" src="https://raw.githubusercontent.com/anastasiyamartynenko/email/d6386f9ce88a27d290c33bcb6bbcdf065d6735f0/images/app-store.svg" alt="" />
                                                                                                             </a>
                                                                                                         </td>
                                                                                                     </tr>
