--- a/letter-1.html
+++ b/letter-1.html
@@ -98,8 +98,8 @@
                                                             <table style="background-color: #F8F8F8;" cellspacing="0" cellpadding="0" bgcolor="#F8F8F8" align="center">
                                                                 <tbody>
                                                                     <tr>
-                                                                        <td align="center">
-                                                                            <table width="100%" cellspacing="0" cellpadding="0">
+                                                                        <td>
+                                                                            <table  width="100%" cellspacing="0" cellpadding="0">
                                                                                 <tbody>
                                                                                     <tr>
                                                                                         <td style="padding-top: 16px; padding-right: 24px; padding-bottom: 22px; padding-left: 24px;" valign="top" align="center">
@@ -107,8 +107,8 @@
                                                                                                 <tbody>
                                                                                                     <tr>
                                                                                                         <td>
-                                                                                                            <a href="https://www.jusaninvest.kz/" target="_blank">
-                                                                                                                <img  src="https://raw.githubusercontent.com/anastasiyamartynenko/iii/master/images/logo.png" alt=""   style="display: block;" width="142"/>
+                                                                                                            <a  align="center" href="https://www.jusaninvest.kz/" target="_blank" style="display: block;">
+                                                                                                                <img  src="https://raw.githubusercontent.com/anastasiyamartynenko/iii/master/images/logo.png" alt=""   style="" width="142"/>
                                                                                                             </a>
                                                                                                         </td>
                                                                                                     </tr>
@@ -475,17 +475,7 @@
                                                                                                             Jusan
                                                                                                         </td>
                                                                                                     </tr>
-                                                                                                    <tr>
-                                                                                                        <td align="center" style="padding-top: 32px; padding-bottom: 32px;">
-                                                                                                            <a href="https://play.google.com/store/apps/details?id=kz.tsb.app24&amp;hl=ru&amp;utm_source=jusaninvest&amp;utm_medium=website" style="text-decoration: none;">
-                                                                                                                <img style="padding-right: 20px; width: 110px;" src="https://raw.githubusercontent.com/anastasiyamartynenko/email/d6386f9ce88a27d290c33bcb6bbcdf065d6735f0/images/google-play.svg"
-                                                                                                                    alt=""/>
-                                                                                                            </a>
-                                                                                                            <a href="https://apps.apple.com/kz/app/j%C3%BDsan/id1441936010?utm_source=jusaninvest&amp;utm_medium=website" style="text-decoration: none;">
-                                                                                                                <img style="width: 110px;" src="https://raw.githubusercontent.com/anastasiyamartynenko/email/d6386f9ce88a27d290c33bcb6bbcdf065d6735f0/images/app-store.svg" alt="" />
-                                                                                                            </a>
-                                                                                                        </td>
-                                                                                                    </tr>
+                                                                                                    <tr> <td align="center" style="padding-top:32px;padding-bottom:32px"><a rel="noopener noreferrer"><img style="padding-right:20px" src="https://ci5.googleusercontent.com/proxy/uagGNHoB7tGr_nvZx5zq135_p1XCGEmnKNmvRK2erhMdfJLXhzvocy-GeH5Csl07UWeX3yGPvW_3HHC4lOSBnjFQxk_Je9EHPNvNkuR29nHnQl5G-RFA6ATQYo-OVFVtgZw84bwmCVGlLCANFYC3KvGfq3HHdBGDeqhJnV8=s0-d-e1-ft#http://login.sendpulse.com/files/emailservice/userfiles/1785366138c90817bb01eadd2134fd0d8157906/google.png" alt="https://play.google.com/store/apps/details?id=kz.tsb.app24&amp;hl=ru&amp;utm_source=jusaninvest&amp;utm_medium=website" class="CToWUd" data-bit="iit"> </a><a rel="noopener noreferrer" href="https://apps.apple.com/kz/app/j%C3%BDsan/id1441936010?utm_source=jusaninvest&amp;utm_medium=website" target="_blank" data-saferedirecturl="https://www.google.com/url?q=https://apps.apple.com/kz/app/j%25C3%25BDsan/id1441936010?utm_source%3Djusaninvest%26utm_medium%3Dwebsite&amp;source=gmail&amp;ust=1669357838302000&amp;usg=AOvVaw1ej9u1_CyeYOtRdVjm9kgl"><img src="https://ci6.googleusercontent.com/proxy/pS5x88JkEMTVzCjWdldlByHDCgxHkcgsqnE86sZCqkG44mGU2rRM8wvwYsnpnB4sjkBNeL0HGEzedsPthevVkbxeFqTUtt6f-fF-voq0KZIKfZ092rytPWR7qVx_0C8_KYlGWTfyTaI__MDxf13EAcPP0w0axUYIzfQegqybSg=s0-d-e1-ft#http://login.sendpulse.com/files/emailservice/userfiles/1785366138c90817bb01eadd2134fd0d8157906/appstore.png" alt="" class="CToWUd" data-bit="iit"></a></td> </tr>
                                                                                                 </tbody>
                                                                                             </table>
                                                                                         </td>
