--- a/letter-1.html
+++ b/letter-1.html
@@ -108,7 +108,7 @@
                                                                                                     <tr>
                                                                                                         <td>
                                                                                                             <a  align="center" href="https://www.jusaninvest.kz/" target="_blank" style="display: block;">
-                                                                                                                <img  src="https://raw.githubusercontent.com/anastasiyamartynenko/iii/master/images/logo.png" alt=""   style="" width="142"/>
+                                                                                                                <img  src="https://raw.githubusercontent.com/anastasiyamartynenko/iii/master/images/logo.png" alt="" width="142"/>
                                                                                                             </a>
                                                                                                         </td>
                                                                                                     </tr>
