--- a/letter-1.html
+++ b/letter-1.html
@@ -202,7 +202,7 @@
                                                                     </tr>
                                                                     <tr>
                                                                         <td align="center" style="font-size: 15px; line-height: 18px; padding-top: 12px; color: #64646b; font-family: Arial, Helvetica, sans-serif;">
-                                                                            Нулевые комиссии на покупку, приятные <br>розыгрыши и многое другое<br />
+                                                                            Нулевые комиссии на покупку, приятные розыгрыши и многое другое<br />
                                                                         </td>
                                                                     </tr>
                                                                     <tr>
@@ -243,7 +243,7 @@
                                                                                                     </tr>
                                                                                                     <tr>
                                                                                                         <td class="center" style="color: #64646b; font-size: 15px; font-weight: 400; line-height: 18px; padding-top: 12px; font-family: Arial, Helvetica, sans-serif;">
-                                                                                                            Пройди обучение без регистрации, <br>
+                                                                                                            Пройди обучение без регистрации, 
                                                                                                             прямо сейчас и получи сертификат
                                                                                                         </td>
                                                                                                     </tr>
